# cmake-starter

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
examples/: CMakeLists.txt
examples/include/: CMakeLists.txt  RandomFunction.hpp
examples/include/lib/: CMakeLists.txt  LibIntProcessor.hpp
examples/include/lib/Matrix/: CMakeLists.txt  HeaderOnlyMatrix.hpp
examples/src/: CMakeLists.txt  RandomFunction.cpp  main.cpp
examples/src/lib/: CMakeLists.txt  LibIntProcessor.cpp
src/: CMakeLists.txt  main.cpp
